# SweetSpot

catkin_sweetspot/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_sweetspot/src/commander_relay/: CMakeLists.txt  CMakeLists.txt~  package.xml
catkin_sweetspot/src/commander_relay/launch/: run_commander_relay.launch
catkin_sweetspot/src/commander_relay/msg/: imu.msg  tof.msg
catkin_sweetspot/src/commander_relay/src/: Makefile  commander_relay.cpp  commander_relay.cpp~
catkin_sweetspot/src/servo_angle/: CMakeLists.txt  package.xml
catkin_sweetspot/src/servo_angle/src/: servo_angle.cpp
catkin_sweetspot/src/spot_control/: CMAKELIST.txt  CMakeLists.txt  package.xml
catkin_sweetspot/src/spot_control/msg/: Position.msg  PositionArray.msg  Servo.msg  ServoArray.msg  ServoConfig.msg  ServoConfigArray.msg  SpotStatus.msg
catkin_sweetspot/src/spot_control/src/: Body.cpp  Body.h  Leg.cpp  Leg.h  Servo.cpp  Servo.h  main.cpp  spot_control.cpp  spotmicro.h
